Fixing layout issue for leaders

--- a/app/assets/stylesheets/modules/_module-media.scss
+++ b/app/assets/stylesheets/modules/_module-media.scss
@@ -150,7 +150,7 @@
     float:left !important;
     padding-right: 10px;
     width: 45%;
-    min-height: 300px;
+    min-height: 320px;
   }
 
   &.leader{
